# fruit-classifier-wasm

./: .gitignore  CMakeLists.txt  README.md  interface.cpp  main.cpp
.github/workflows/: hugo.yml
datasets/sample/: result.csv  testing.csv  training.csv
lib/: activation.h  debug.h  neuron.h
lib/nn/: act.h  layer.cpp  layer.h  make.h  neuron.cpp  neuron.h
nn/: CMakeLists.txt  act.h  hidden_layer.h  layer.h  make.h  module.h  network.h  neuron.h  nn.h  output_layer.h
nn/act/: act.cpp
nn/layer/: hidden_layer.h  layer.cpp  layer.h  output_layer.h
nn/make/: make.cpp  make.h
nn/network/: network.cpp  network.h
nn/neuron/: neuron.cpp  neuron.h
nn/src/: CMakeLists.txt  act.cpp  layer.cpp  loss.cpp  make.cpp  module.cpp  network.cpp  neuron.cpp  process.cpp  util.cpp
src/: act.cpp  layer.cpp  make.cpp  network.cpp  neuron.cpp  util.cpp
test/: CMakeLists.txt  act_test.cpp  constants.h  globals.h  layer_test.cpp  loss_test.cpp  network_test.cpp  neuron_test.cpp  util_test.cpp
util/: debug.h
wasm/: emscripten_browser_file.h  io_interface.h  io_utility.h  main.cpp  network_interface.h
web/: hugo.toml
web/assets/css/: main.css
web/content/: _index.md  control-panel.html  control.html  initialize.html  setup.html  snippet.html  visualizer.html
web/content/about/: _index.md
web/content/control/: data.html  test.html  train.html
web/content/setup/: advanced.html  structure.html
web/layouts/_default/: baseof.html
web/layouts/partials/: footer.html  head.html  header.html  utility.html
web/layouts/shortcodes/: accordion.html  include-script.html
web/static/datasets/fruits/: test_in.csv  test_out.csv  train_in.csv  train_out.csv
web/static/datasets/fruits_simple/: test_in.csv  test_out.csv  train_in.csv  train_out.csv
web/static/datasets/mobile/: test_in.csv  test_out.csv  train_in.csv  train_out.csv
web/static/datasets/xor/: test_in.csv
web/static/js/: Codec.js  TableObject.js  data.js  io.js  table.js  visualizer.js
